libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__variable-unknown-field.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: unknown field "foo" in variable declaration at 1:27
	  1 | variable region: string { foo = "bar" }
	    |                           ^
	- parse error: missing required 'version' directive
