libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__variable-unterminated-block.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: expected '}', got end of input at 1:48
	  1 | variable region: string { default = "us-east-1"
	    |                                                ^
	- parse error: missing required 'version' directive
